# loongson-tools

./: Makefile  README.md  loongson-fan.c  loongson-fan.h  loongson-firmware.c  loongson-utils.h  meson.build  tools-window.c
data/: cn.loongson.daemon.conf  cn.loongson.daemon.service.in  cn.loongson.daemon.xml  loongson-daemon.appdata.xml.in  loongson-daemon.desktop.in  loongson-daemon.service.in  meson.build
data/hicolor/: meson.build
data/icons/: meson.build
po/: POTFILES.in  loongson-daemon.pot  zh_CN.mo  zh_CN.po
src/: dmidecode.c  dmidecode.h  loongson-daemon.c  loongson-daemon.h  loongson-fan.c  loongson-fan.h  loongson-firmware.c  loongson-firmware.h  loongson-server.c  loongson-utils.c  loongson-utils.h  main.c  meson.build  spi.c  spi.h  tools-window.c  tools-window.h
